# Bruteforcer

./: LICENSE  README.md  bruteforce.py  pyproject.toml  setup.cfg
src/bruteforcer/: __main__.py  bruteforce.py  cli.py
