[tool]
name = "bruteforce-cli"
version = "0.1.0"
description = "A password cracking tool for HTTP, SSH, and FTP."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.6"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"