[metadata]
name = bruteforce-cli
version = 0.1.0
description = A password cracking tool for various services.
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/bruteforce-cli

[options]
packages = find:
install_requires =
    requests
    paramiko

[options.entry_points]
console_scripts =
    bruteforce = bruteforce.__main__:main